// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CampusCard should render 1`] = `
<View
  category=""
  inHorizontalList={true}
  isLoading={false}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 16,
      "margin": 8,
      "shadowColor": "rgba(165, 165, 165, 0.6)",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 6,
    }
  }
>
  <View
    style={
      Object {
        "borderRadius": 16,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "flexWrap": "nowrap",
          "height": 96,
          "justifyContent": "space-between",
        }
      }
    >
      <View
        animate={null}
        customAnimate={null}
        onReady={false}
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "height": "100%",
            "resizeMode": "cover",
            "width": "100%",
          }
        }
      >
        <Image
          onLoad={[Function]}
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://www.placecage.com/c/250/250",
                "url": "https://www.placecage.com/c/250/250",
              },
            ]
          }
          style={
            Object {
              "aspectRatio": 1,
              "backgroundColor": "#A5A5A5",
              "height": "100%",
              "opacity": 0,
              "resizeMode": "cover",
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "paddingHorizontal": 16,
            "paddingVertical": 16,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "stretch",
              "flexDirection": "row",
              "flexWrap": "nowrap",
              "height": 20.16,
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#303030",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 20.16,
              }
            }
          >
            Cameron Poe
          </Text>
          <Text
            placeholderWidth="15%"
            style={
              Object {
                "color": "#505050",
                "fontFamily": "InterUI-Bold",
                "fontSize": 12,
                "lineHeight": 17.28,
              }
            }
          >
            2038
            mi
          </Text>
        </View>
        <Text
          style={
            Object {
              "color": "#505050",
              "fontFamily": "InterUI-Bold",
              "fontSize": 12,
              "lineHeight": 17.28,
            }
          }
        >
          "Why couldn't you just put the Bunny back in the box?"
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`CampusCard should render a loading 1`] = `
<View
  category=""
  inHorizontalList={true}
  isLoading={true}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 16,
      "margin": 8,
      "shadowColor": "rgba(165, 165, 165, 0.6)",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 6,
    }
  }
>
  <View
    style={
      Object {
        "borderRadius": 16,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "flexWrap": "nowrap",
          "height": 96,
          "justifyContent": "space-between",
        }
      }
    >
      <View
        animate={null}
        customAnimate={null}
        onReady={false}
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "height": "100%",
            "resizeMode": "cover",
            "width": "100%",
          }
        }
      >
        <Image
          onLoad={[Function]}
          source={
            Array [
              Object {
                "cache": "force-cache",
                "uri": "https://www.placecage.com/c/250/250",
                "url": "https://www.placecage.com/c/250/250",
              },
            ]
          }
          style={
            Object {
              "aspectRatio": 1,
              "backgroundColor": "#A5A5A5",
              "height": "100%",
              "opacity": 0,
              "resizeMode": "cover",
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "paddingHorizontal": 16,
            "paddingVertical": 16,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "stretch",
              "flexDirection": "row",
              "flexWrap": "nowrap",
              "height": 20.16,
              "justifyContent": "space-between",
            }
          }
        >
          <View
            style={
              Object {
                "alignSelf": "stretch",
                "backgroundColor": "#A5A5A5",
                "borderRadius": 16,
                "height": 14,
                "marginVertical": 3.08,
                "width": "60%",
              }
            }
          />
          <View
            style={
              Object {
                "alignSelf": "stretch",
                "backgroundColor": "#A5A5A5",
                "borderRadius": 16,
                "height": 12,
                "marginVertical": 2.6400000000000006,
                "width": "15%",
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "alignSelf": "stretch",
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 12,
              "marginVertical": 2.6400000000000006,
              "width": "50%",
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;
